fix wrong font name

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,5 +8,5 @@
 }
 
 body {
-  font-family: "Fira Code Retina";
+  font-family: "Fira Code";
 }
